--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ BUILD*
 log*
 test_gvsoc_emul
 *.tflite
-validation_on_emul/*_emul
+accuracy_on_validation_data/*_emul
 !mobilenet_v1_1_0_224_quant.tflite
