--- a/testset.cfg
+++ b/testset.cfg
@@ -3,7 +3,7 @@ from plptest import *
 TestConfig = c = {}
 
 test = Test(
-  name = 'VisualWakeWords',
+  name = 'Image Classification Networks',
   commands = [
     Shell('clean', 'make clean'),
     Shell('build', 'make all'),
