wrong test default setting

--- a/testset_all.cfg
+++ b/testset_all.cfg
@@ -12,7 +12,7 @@ def check_output(config, output):
 test = Test(
   name = 'Image Classification Networks',
   commands = [
-    Shell('run', 'python test_models.py 18'),
+    Shell('run', 'python test_models.py'),
     Check('check', check_output)
   ],
   timeout=1000000
