--- a/testset.cfg
+++ b/testset.cfg
@@ -5,7 +5,7 @@ TestConfig = c = {}
 test = Test(
   name = 'Image Classification Networks',
   commands = [
-    Shell('clean', 'make clean'),
+    Shell('clean', 'make clean_model clean'),
     Shell('build', 'make all'),
     Shell('run',   'make run')
   ],
