--- a/gaptest.yml
+++ b/gaptest.yml
@@ -17,3 +17,28 @@ variants:
             - release
         duration: standard
         flags: ~
+    mobilenetv2:
+        name: mobilenetv2
+        tags:
+            - integration
+            - release
+        duration: standard
+        flags: MODEL_ID=17
+    float16:
+        name: float16
+        tags:
+            - integration
+            - release
+        duration: standard
+        chips:
+            - gap9
+        flags: MODEL_FP16=1
+    ne16:
+        name: ne16
+        tags:
+            - integration
+            - release
+        duration: standard
+        chips:
+            - gap9
+        flags: MODEL_NE16=1
