spi-wifi changes from Jins code

--- a/spi-wifi/Makefile
+++ b/spi-wifi/Makefile
@@ -1,5 +1,6 @@
 APP = test
-APP_SRCS += spi_master.c
+APP_SRCS += main.c spi_wifi.c
+#APP_SRCS += spi_master.c
 APP_INC += . $(GAP_LIB_PATH)/include
 APP_CFLAGS +=
 APP_CFLAGS += -DJPEG_Q_90
