--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ accuracy_on_validation_data/*_emul
 !mobilenet_v1_1_0_224_quant.tflite
 *.DS_Store
 *__pycache__
-web/htdocs/imgs/*.png
+web/htdocs/imgs/*
