--- a/sdk.config
+++ b/sdk.config
@@ -1,4 +1,7 @@
 CONFIG_CNN_SQ8=y
+CONFIG_MODEL_NE16=y
+CONFIG_MODEL_L2_MEMORY=1350000
+
 CONFIG_MODEL_ID=0
 CONFIG_NNTOOL_MODEL_QUANTIZED=y
 CONFIG_MODEL_LOGLEVEL=1
