--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ set(IMAGE images/ILSVRC2012_val_00011158_${AT_INPUT_WIDTH}.ppm)
 if (CONFIG_USE_PRIVILEGED_MRAM)
     message(STATUS "Selected MRAM Privileged flash")
     list(APPEND NNTOOLSCRIPT_FLAGS -DMODEL_SEC_L3_FLASH=AT_MEM_L3_MRAMFLASH)
+else()
+    list(APPEND NNTOOLSCRIPT_FLAGS -DMODEL_SEC_L3_FLASH=)
 endif()
 autotiler_define_gen_names(${TARGET_NAME})
 nntool_setup(${TARGET_NAME})
