--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,13 @@ endif()
 if (CONFIG_MODEL_REENTRANT_MODE)
 list(APPEND TARGET_PREPROCESSOR -DREENTRANT)
 endif()
+if (CONFIG_GPIO_MEAS)
+list(APPEND TARGET_PREPROCESSOR -DGPIO_MEAS)
+endif()
+if (CONFIG_SILENT)
+list(APPEND TARGET_PREPROCESSOR -DSILENT)
+endif()
+
 
 project(${TARGET_NAME} C ASM)
 add_executable(${TARGET_NAME} ${TARGET_SRCS})
