Better perf with im2col ne16 in first layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,10 @@ endif()
 if (CONFIG_SILENT)
 list(APPEND TARGET_PREPROCESSOR -DSILENT)
 endif()
+if (CONFIG_VOLTAGE)
+message("${APP_MSG_PREFIX} VOLTAGE set to ${CONFIG_VOLTAGE}")
+list(APPEND TARGET_PREPROCESSOR -DVOLTAGE=${CONFIG_VOLTAGE})
+endif()
 
 
 project(${TARGET_NAME} C ASM)
